--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -30,6 +30,12 @@ body
 .page-container{
 	padding-right: 20px;
 	padding-left:20px;
+	background-color: #f0f2f0;
+}
+.page-container .column{
+}
+.page-container .page-main-content
+{
 }
 
 .page-footer{
@@ -40,6 +46,8 @@ body
 	min-height: 100%;
   /* equal to footer height */
   margin-bottom: -142px;
+
+  background-color: #f0f2f0;
 }
 .wrapper:after {
   content: "";
@@ -53,27 +61,43 @@ body
 .blog-post .blog-body
 {
 	overflow: hidden;
+	padding:10px 50px;
 }
 .blog-post .blog-image
 {
-	text-align: center;
+	overflow: hidden;
 }
-.blog-post .blog-image img
-{
-	width:700px;
-	padding: 10px;
+.blog-post .blog-image img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 .blog-post
 {
-	padding: 10px;
+	padding: 50px 0px;
+	background-color: white;
+	border-bottom: 3px solid #ddd;
+	margin-top: 20px;
 }
 .blog-post .blog-header
 {
-	margin-bottom: 10px;
+	text-align: center;
+	margin-bottom: 30px;
 }
 .blog-post .blog-header h2 a 
 {
 	text-decoration: none;
 }
 #delete-modal{
+}
+.content-area
+{
+	background: white;
+	border-bottom: 3px solid #ddd;
+	padding:0 !important;
+}
+.content-area .content
+{
+	padding:30px 30px 30px 30px;
+
 }
