--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -56,6 +56,7 @@ body
 .page-footer, .wrapper:after {
   /* .push must be the same height as footer */
   height: 142px; 
+  padding-top: 20px;
 }
 
 .blog-post .blog-body
