--- a/app/assets/sass/main.scss.scss
+++ b/app/assets/sass/main.scss.scss
@@ -9,3 +9,32 @@ html, body{
 {
 	float:right;
 }
+
+/*
+* Style for the main navbar
+*/
+.main-nav
+{
+	/*
+	* Overwrite Foundation Style: .top-bar
+	* Change the color of the default top bar
+	*/
+	&.top-bar
+	{
+		background: #293241;
+	}
+	/*
+	* Overwrite Foundation Style: .top-bar-section
+	* Change the color of the default top bar
+	*/
+	.top-bar-section li:not(.has-form) a:not(.button)
+	{
+		background: #293241 ;
+	}
+	.top-bar-section li.active:not(.has-form) a:not(.button)
+	{
+		background: #15a4fa;
+
+	}
+
+}
