--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,33 +10,59 @@
   font-family: "Helvetica Neue";
   src: url("../fonts/Helvetica Neue/HelveticaNeue.otf"); }
 
+.typed-cursor {
+  opacity: 1;
+  -webkit-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite; }
+
+@keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
 [ng-cloak] {
   display: none; }
 
-#header {
-  font-family: "Helvetica Neue";
-  padding: 25px 0 25px 0; }
-  #header .top-bar {
-    background: #FFFFFF; }
-    #header .top-bar .name h1 a, #header .top-bar .name h2 a, #header .top-bar .name h3 a, #header .top-bar .name h4 a, #header .top-bar .name p a, #header .top-bar .name span a {
-      color: #000000; }
-      #header .top-bar .name h1 a span, #header .top-bar .name h2 a span, #header .top-bar .name h3 a span, #header .top-bar .name h4 a span, #header .top-bar .name p a span, #header .top-bar .name span a span {
-        display: inline-block;
-        vertical-align: middle;
-        font-size: 14pt; }
-    #header .top-bar .top-bar-section .right li a {
-      color: #B0B0B0;
-      background: #ffffff; }
-    #header .top-bar .top-bar-section .right li.active a {
-      background: #ffffff;
-      color: #000000; }
-    #header .top-bar .toggle-topbar a {
-      color: #000000; }
-    #header .top-bar .has-form {
-      background: #ffffff; }
-      #header .top-bar .has-form input {
-        border-color: #ffffff;
-        box-shadow: none; }
+.header {
+  margin-bottom: 85px; }
+  .header .navbar.contain-to-grid {
+    background: #FFFFFF;
+    font-family: "Helvetica Neue";
+    padding: 20px 0 20px 0; }
+    .header .navbar.contain-to-grid .top-bar {
+      background: #FFFFFF; }
+      .header .navbar.contain-to-grid .top-bar .name h1 a, .header .navbar.contain-to-grid .top-bar .name h2 a, .header .navbar.contain-to-grid .top-bar .name h3 a, .header .navbar.contain-to-grid .top-bar .name h4 a, .header .navbar.contain-to-grid .top-bar .name p a, .header .navbar.contain-to-grid .top-bar .name span a {
+        color: #000000; }
+        .header .navbar.contain-to-grid .top-bar .name h1 a span, .header .navbar.contain-to-grid .top-bar .name h2 a span, .header .navbar.contain-to-grid .top-bar .name h3 a span, .header .navbar.contain-to-grid .top-bar .name h4 a span, .header .navbar.contain-to-grid .top-bar .name p a span, .header .navbar.contain-to-grid .top-bar .name span a span {
+          display: inline-block;
+          vertical-align: middle;
+          font-size: 14pt; }
+      .header .navbar.contain-to-grid .top-bar .top-bar-section .right li a {
+        color: #B0B0B0;
+        background: #ffffff; }
+      .header .navbar.contain-to-grid .top-bar .top-bar-section .right li.active a {
+        background: #ffffff;
+        color: #000000; }
+      .header .navbar.contain-to-grid .top-bar .top-bar-section .right li a:hover {
+        color: #000000; }
+      .header .navbar.contain-to-grid .top-bar .toggle-topbar a {
+        color: #000000; }
+      .header .navbar.contain-to-grid .top-bar .has-form {
+        background: #ffffff; }
+        .header .navbar.contain-to-grid .top-bar .has-form input {
+          border-color: #ffffff;
+          box-shadow: none; }
 
 .hero {
   height: 80%;
@@ -46,23 +72,69 @@
   color: #ffffff; }
   .hero .intro-text {
     padding-top: 18%;
-    text-align: center; }
-    .hero .intro-text p {
-      font-family: 'Helvetica Neue UltraLight';
-      font-size: 40px;
-      letter-spacing: 10px; }
+    text-align: center;
+    font-family: 'Helvetica Neue UltraLight';
+    font-size: 40px;
+    letter-spacing: 10px; }
 
-.signup {
+.login {
   font-family: "Helvetica Neue";
-  margin-top: 25%; }
-  .signup h1 {
-    font-size: 16pt;
-    margin-bottom: 30px; }
-  .signup .button {
+  padding-top: 18%; }
+  .login h1 {
+    margin-bottom: 30px;
+    font-size: 18px;
+    color: #1A1A1A;
+    line-height: 21px; }
+  .login .button {
     background: #BFDEDE;
     color: #ffffff; }
-  .signup .button:hover, .signup .button:focus {
-    background: #BFDEDE;
-    color: #ffffff; }
+  .login .button:hover {
+    background: #CFE6E6; }
+  .login .button:focus {
+    background: #B5D2D2;
+    border: none;
+    outline-color: #fff; }
+  .login .column {
+    background: #FFFFFF;
+    padding: 20px;
+    box-shadow: 0px 20px 35px 0px rgba(0, 0, 0, 0.1); }
+  .login input {
+    border: 2px solid #DEDEDE; }
+
+.blog {
+  padding-bottom: 50px; }
+  .blog article {
+    background: #FFFFFF;
+    box-shadow: 0px 20px 35px 0px rgba(0, 0, 0, 0.1);
+    font-family: "Helvetica Neue";
+    margin-top: 30px; }
+    .blog article .post-heading {
+      padding: 30px 30px 0 30px;
+      background: #FFFFFF; }
+      .blog article .post-heading a.title {
+        color: #000000;
+        font-weight: bold;
+        padding-right: 30px; }
+      .blog article .post-heading .likes {
+        font-weight: normal;
+        font-size: 13px;
+        color: #808080; }
+        .blog article .post-heading .likes .count {
+          margin-right: 10px; }
+    .blog article .post-body {
+      padding: 10px 30px 30px 30px; }
+      .blog article .post-body p {
+        font-family: "Helvetica Neue";
+        font-weight: normal;
+        font-size: 13px;
+        color: #808080;
+        line-height: 21px; }
+    .blog article .image {
+      height: 300px;
+      background-size: cover; }
+
+.container {
+  padding: 30px;
+  background: #FFFFFF; }
 
 /*# sourceMappingURL=app.css.map */
