--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -138,6 +138,9 @@ body{
 				font-weight:normal;
 				font-size: 13px;
 				color: #808080;
+				.red {
+					color:#CD1E3D;
+				}
 			}
 		}
 		.post-body{
