--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,9 @@
 body{
 	
 }
+.wrapper{
+	background:#FFFFFF;
+}
 .header{
 	margin-bottom:85px;
 	.navbar {
@@ -165,6 +168,37 @@ body{
 	padding:30px;
 	background:#FFFFFF;
 }
+.main-content{
+	background:#FFFFFF;
+	padding-top:150px;
+	padding-bottom: 60px;
+	article {
+		.title {
+			h1 {
+				font-family: "Helvetica Neue";
+				font-size: 36px;
+				color: #1A1A1A;
+				line-height: 43px;
+			}			
+			padding-bottom:100px;			
+			border-bottom: solid 1px #F2F2F2;
+		}
+		.body{
+			margin-top:48px;
+			margin-bottom:83px;
+			/* Lorem Ipsum is simpl: */
+			font-family: "Helvetica Neue";
+			font-size: 15px;
+			color: #1A1A1A;
+			line-height: 26px;
+		}
+	}
+	.footer{
+		border-top: solid 1px #F2F2F2;
+		
+	}
+}
+
 
 
 
