Updated the home page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,7 @@
   .promo-block-v2 .promo-block-v2-text {
     max-width: 600px; }
 
-.header-shrink.header-transparent .navbar-logo, .header-transparent .navbar-logo {
+.header-shrink.header-transparent .navbar-logo, .header-transparent .navbar-logo, .footer-v5-copyright .footer-v5-copyright-logo {
   width: 250px; }
 
 .header-transparent .navbar-logo .navbar-logo-img {
