--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -16,3 +16,8 @@
 	background:url('/images/rsz_photo-1433360405326-e50f909805b3.jpg')  no-repeat;
 	background-position:center center;
 }
+.breadcrumbs-v5.breadcrumbs-v5-bg-img-v4{
+	background: url('https://images.unsplash.com/photo-1438755582627-221038b62986?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=9fe92622152a966c84d9a099985d5e7e') no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+}
