Added post media types and added inital design for create post page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,12 +9,17 @@
 .header-transparent .navbar-logo .navbar-logo-img {
   width: 234px; }
 
-.coming-soon {
+.page.coming-soon {
   background: url("/images/rsz_photo-1433360405326-e50f909805b3.jpg") no-repeat;
   background-position: center center; }
 
-.breadcrumbs-v5.breadcrumbs-v5-bg-img-v4 {
-  background: url("/images/rsz_2photo-1438755582627-221038b62986.jpg") no-repeat;
+.page.create-post .breadcrumbs-v5.breadcrumbs-v5-bg-img-v4 {
+  background: url("/images/rsz_photo-1422246358533-95dcd3d48961.jpg") no-repeat; }
+
+.page.index-post .breadcrumbs-v5.breadcrumbs-v5-bg-img-v4 {
+  background: url("/images/rsz_2photo-1438755582627-221038b62986.jpg") no-repeat; }
+
+.page.breadcrumbs-v5.breadcrumbs-v5-bg-img-v4 {
   background-size: cover;
   background-position: 50% 50%; }
 
