Updated the posts pages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,6 +31,9 @@
 .page.index-post .breadcrumbs-v5.breadcrumbs-v5-bg-img-v4 {
   background: url("/images/rsz_2photo-1438755582627-221038b62986.jpg") no-repeat; }
 
+.page.show-post .breadcrumbs-v5.breadcrumbs-v5-bg-img-v4 {
+  background: url("/images/rsz_2jeqzi01ru2hbhgltbgb_mg_5236.jpg") no-repeat; }
+
 .page.breadcrumbs-v5.breadcrumbs-v5-bg-img-v4 {
   background-size: cover;
   background-position: 50% 50%; }
