--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -41,6 +41,11 @@ $logoWidth : 200px;
 			background: url('/images/rsz_2photo-1438755582627-221038b62986.jpg') no-repeat;
 		}
 	}
+	&.show-post{
+		.breadcrumbs-v5.breadcrumbs-v5-bg-img-v4{
+			background: url('/images/rsz_2jeqzi01ru2hbhgltbgb_mg_5236.jpg') no-repeat;
+		}
+	}
 	&.breadcrumbs-v5.breadcrumbs-v5-bg-img-v4{
 	    background-size: cover;
 	    background-position: 50% 50%;
