Added feature to leave comments on post

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -57,3 +57,7 @@ $logoWidth : 200px;
     border: 1px solid #e5e6e7!important;
     border-radius: 1px !important;
 }
+
+.modal-content{
+	border-radius: 0px;
+}
