--- a/public/css/app.css
+++ b/public/css/app.css
@@ -44,4 +44,7 @@
   border: 1px solid #e5e6e7 !important;
   border-radius: 1px !important; }
 
+.modal-content {
+  border-radius: 0px; }
+
 /*# sourceMappingURL=app.css.map */
