--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -46,6 +46,11 @@ $logoWidth : 200px;
 			background: url('/images/rsz_2jeqzi01ru2hbhgltbgb_mg_5236.jpg') no-repeat;
 		}
 	}
+	&.index-portfolio{
+		.breadcrumbs-v5.breadcrumbs-v5-bg-img-v4{
+			background: url('/images/rsz_photo-1441471349424-351990746ff4ixlib.jpg') no-repeat;
+		}
+	}
 	&.breadcrumbs-v5.breadcrumbs-v5-bg-img-v4{
 	    background-size: cover;
 	    background-position: 50% 50%;
