--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -48,7 +48,9 @@ $logoWidth : 200px;
 	}
 	&.index-portfolio{
 		.breadcrumbs-v5.breadcrumbs-v5-bg-img-v4{
-			background: url('/images/rsz_photo-1441471349424-351990746ff4ixlib.jpg') no-repeat;
+			background: url('/images/rsz_photo-1422246358533-95dcd3d48961.jpg') no-repeat;
+			background-position: center bottom;
+			background-size: cover;
 		}
 	}
 	&.breadcrumbs-v5.breadcrumbs-v5-bg-img-v4{
@@ -65,4 +67,7 @@ $logoWidth : 200px;
 
 .modal-content{
 	border-radius: 0px;
+}
+.clickable:hover {
+	cursor: pointer;
 }
